force-app/main/default/objects/AccountPlan/AccountPlan.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>