force-app/main/default/objects/AccountPlan/fields/AccountActivityLevel__c.field-meta.xml
<CustomField>
    <fullName>AccountActivityLevel__c</fullName>
    <formula>Account.Activity_Level__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity Level</label>
    <type>Text</type>
</CustomField>