force-app/main/default/objects/AccountPlan/fields/ActionPlanComments__c.field-meta.xml
<CustomField>
    <fullName>ActionPlanComments__c</fullName>
    <label>Comments</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>