force-app/main/default/objects/AccountPlan/fields/AnalitycsInsights__c.field-meta.xml
<CustomField>
    <fullName>AnalitycsInsights__c</fullName>
    <label>Insights</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>