force-app/main/default/objects/AccountPlan/fields/ClientOpportunities__c.field-meta.xml
<CustomField>
    <fullName>ClientOpportunities__c</fullName>
    <label>Opportunities</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>