force-app/main/default/objects/AccountPlan/fields/ClientStrenghts__c.field-meta.xml
<CustomField>
    <fullName>ClientStrenghts__c</fullName>
    <label>Strenghts</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>