force-app/main/default/objects/AccountPlan/fields/ClientThreats__c.field-meta.xml
<CustomField>
    <fullName>ClientThreats__c</fullName>
    <label>Threats</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>