force-app/main/default/objects/AccountPlan/fields/ClientWeakness__c.field-meta.xml
<CustomField>
    <fullName>ClientWeakness__c</fullName>
    <label>Weakness</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>