force-app/main/default/objects/AccountPlan/fields/StrategicOperationsComments__c.field-meta.xml
<CustomField>
    <fullName>StrategicOperationsComments__c</fullName>
    <label>Comments</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>