force-app/main/default/objects/AccountPlan/fields/SwotInsights__c.field-meta.xml
<CustomField>
    <fullName>SwotInsights__c</fullName>
    <label>Insights</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>