force-app/main/default/objects/AccountPlan/recordTypes/Account_Plan_Report.recordType-meta.xml
<RecordType>
    <fullName>Account_Plan_Report</fullName>
    <active>true</active>
    <description>Account Plan Report</description>
    <label>Account Plan Report</label>
</RecordType>